Melhorando a testabilidade do html

--- a/src/index.html
+++ b/src/index.html
@@ -14,18 +14,18 @@
   <button id="Novo Projeto" name="btn_novo_projeto">Novo Projeto</button>
   <br>
   <br>
-  <table border="1">
-    <tr id="projeto1">
+  <table id="projetos" border="1">
+    <tr>
       <td><a href="#">Projeto X</a></td>
       <td>Semana 2/4 IDC 0.8 IDP 0.9</td>
       <td><a href="#">X</a></td>
     </tr>
-    <tr id="projeto2">
+    <tr>
       <td><a href="#">Projeto Y</a></td>
       <td>Semana 4/6 IDC 1.3 IDP 1.0</td>
       <td><a href="#">X</a></td>
     </tr>
-    <tr id="projeto3">
+    <tr>
       <td><a href="#">Projeto Z</a></td>
       <td>Semana 3/10 IDC 1.0 IDP 1.0</td>
       <td><a href="#">X</a></td>
