Adicionando dados nos testes de aceitação

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
     </tr>
     <tr>
       <td><a href="#">Projeto Y</a></td>
-      <td>Semana 4/6 IDC 1.3 IDP 1.0</td>
+      <td>Mês 4/6 IDC 1.3 IDP 1.0</td>
       <td><a href="#">X</a></td>
     </tr>
     <tr>
